Implement verification Email in GO
